--- a/aeondial.css
+++ b/aeondial.css
@@ -1276,7 +1276,10 @@ padding-bottom: 100px;
     margin-top: 100px
   }
 }
-
+@media(max-width:360px){
+  .rights{
+     transform: translate(80px, 700px)
+}
 /*@media(max-width:414px){
  
   .featurescard{
