--- a/aeondial.css
+++ b/aeondial.css
@@ -1151,17 +1151,19 @@ padding-bottom: 100px;
   }
   .reviews p{
     border-bottom: 3px solid grey;
-    width: 90%
+    width: 90%;
+    
   }
   .reviews{
-    margin-bottom: 0px
+    margin-bottom: 0px;
+    font-family:Lato
   }
   .reviews p{
     font-size: 20px
   }
   .reviews h3{
-    font-size: 20px;
-    width: 400px
+    font-size: 17px;
+    width: 390px
   }
   #thewatch{
     scale: 0.6;
@@ -1175,7 +1177,7 @@ padding-bottom: 100px;
   }
   .stores p{
     font-size: 14px;
-    transform:translate(30px);
+    transform:translate(10px);
     width: 390px
   }
   
@@ -1188,6 +1190,10 @@ padding-bottom: 100px;
     display: flex;
     position: absolute;
     transform: translate(-20px,60px)
+  }
+  .stores h3{
+  scale:0.96;
+    font-family:Inter
   }
   .footer{
     width: 100%;
@@ -1296,6 +1302,10 @@ padding-bottom: 100px;
     display: flex;
     position: absolute;
     transform: translate(-28px,50px)
+  }
+  .reviews p{
+    width:385px;
+    font-size:17px
   }
 }
 /*@media(max-width:414px){
