--- a/aeondial.css
+++ b/aeondial.css
@@ -1288,7 +1288,7 @@ padding-bottom: 100px;
 }
   .stores p{
     font-size: 14px;
-    transform:translate(30px);
+    transform:translate(10px);
     width: 390px
   }
   
@@ -1301,11 +1301,14 @@ padding-bottom: 100px;
   .stores #break{
     display: flex;
     position: absolute;
-    transform: translate(-28px,50px)
+    transform: translate(-35px,50px)
   }
   .reviews p{
-    width:385px;
+    width:370px;
     font-size:17px
+  }
+  .reviews h3{
+  width:370px
   }
 }
 /*@media(max-width:414px){
