--- a/aeondial.css
+++ b/aeondial.css
@@ -1311,6 +1311,9 @@ padding-bottom: 100px;
   width:370px;
     font-size:18px
   }
+   .logosection{
+    transform: translate(100px,10px) scale(00.87)
+  }
 }
 /*@media(max-width:414px){
  
