--- a/aeondial.css
+++ b/aeondial.css
@@ -1317,7 +1317,8 @@ padding-bottom: 100px;
     transform: translate(110px,10px) scale(00.87)
   }
   .reviews p2{
-  width:370px
+  max-width:370px;
+    font-size:18px
   }
 }
 /*@media(max-width:414px){
