--- a/aeondial.css
+++ b/aeondial.css
@@ -1301,7 +1301,7 @@ padding-bottom: 100px;
   .stores #break{
     display: flex;
     position: absolute;
-    transform: translate(-15px,50px)
+    transform: translate(-25px,50px)
   }
   .reviews p{
     width:350px;
@@ -1319,6 +1319,20 @@ padding-bottom: 100px;
   .reviews p2{
   max-width:350px;
     font-size:15px
+  }
+   .products h3{
+    font-size: 20px
+  }
+  
+  .products p5{
+    font-weight: 100;
+    width: 360px;
+    font-size: 13px
+  }
+  .displayproducts .card{
+    margin-left: -10px;
+    scale: 0.56;
+    margin-top: -40px
   }
 }
 /*@media(max-width:414px){
