--- a/aeondial.css
+++ b/aeondial.css
@@ -1335,9 +1335,23 @@ padding-bottom: 100px;
     margin-top: -40px
   }
 }
-/*@media(max-width:414px){
- 
-  .featurescard{
+@media(max-width:375px){
+  .products h3{
+    font-size: 20px
+  }
+  
+  .products p5{
+    font-weight: 100;
+    width: 360px;
+    font-size: 13px
+  }
+  .displayproducts .card{
+    margin-left: -10px;
+    scale: 0.52;
+    margin-top: -40px
+  }
+}
+ /* .featurescard{
     height: 70vh
   }
   .featurescard h3{
