--- a/aeondial.css
+++ b/aeondial.css
@@ -1361,9 +1361,12 @@ padding-bottom: 100px;
   .featurescard p4{
     width: 330px;
     font-size: 15px;
-    margin-left: -45px;
+    margin-left: -50px;
     font-family:Inter;
     font-weight:200
+  }
+  .products p5{
+  width:370px
   }
 }
  /* .featurescard{
