--- a/aeondial.css
+++ b/aeondial.css
@@ -1365,7 +1365,13 @@ padding-bottom: 100px;
     font-family:Inter;
     font-weight:200
   }
- 
+  .specss{
+    padding-bottom: 290px;
+  }
+  .featurescard{
+    height: 81vh;
+    margin-top: 170px;
+  }
 }
  /* .featurescard{
     height: 70vh
