--- a/aeondial.css
+++ b/aeondial.css
@@ -969,7 +969,7 @@ transform: translate(-70px,30px);
   }
   .specs{
     scale: 1.2;
-   
+   font-family:Inter
   }
 
    #one{
@@ -1366,11 +1366,11 @@ padding-bottom: 100px;
     font-weight:200
   }
   .specss{
-    padding-bottom: 290px;
+    padding-bottom: 350px;
   }
   .featurescard{
     height: 81vh;
-    margin-top: 170px;
+    margin-top: 150px;
   }
 }
  /* .featurescard{
