--- a/cart.css
+++ b/cart.css
@@ -156,7 +156,7 @@ display:flex
     border:1px solid #0197f6
  }   
  .itembox p{
-    transform: translate(160px, -90px);
+    transform: translate(160px, -90px) );
     font-family:Inter;
  }
  .itembox .control{
@@ -173,7 +173,14 @@ display:flex
     font-weight:200
  }
 }
-
+@media(max-width:375px){
+    .itembox img{
+        scale:0.7
+    }
+    .itembox p{
+        scale:0.85
+    }
+}
 
 /*@media (max-width:414px){
 //#sidenav{
