--- a/cart.css
+++ b/cart.css
@@ -178,7 +178,9 @@ display:flex
         scale:0.7
     }
     .itembox p{
-        scale:0.85
+        scale:0.85;
+         transform: translate(200px, -60px);
+        font-weight:400
     }
 }
 
