--- a/cart.css
+++ b/cart.css
@@ -174,7 +174,7 @@ display:flex
  }
     h5{
         font-size:25px;
-        font-family:Inter
+        font-family:Manrope
     }
 }
 @media(max-width:375px){
